--- a/README.rdoc
+++ b/README.rdoc
@@ -4,8 +4,8 @@
 
 * Ruby version >= 2.1.6
 
-* Configuration: check database.yml.example and settings.yml.example
+* Configuration: check database.yml.example, settings.yml.example and .env.example. API_USER and API_PASSWORD are obtained through registration in api_provider app.
 
-* Database creation and seeds: API_USER='user' API_PASSWORD='password' bundle exec rake db:setup. User and password obtained through registration in api_provider app.
+* Database creation and seeds: bundle exec rake db:setup.
 
 * Specs: bundle exec rspec spec/
